# catgrad-rs

./: .gitignore  .pre-commit-config.yaml  .rust-analyzer  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
catgrad/: Cargo.toml
catgrad-core/: Cargo.toml  README.md
catgrad-core/examples/: README.md  hidden.rs  hidden_candle.rs
catgrad-core/src/: check.rs  lib.rs  prelude.rs  svg.rs  util.rs
catgrad-core/src/abstract_interpreter/: eval.rs  mod.rs  run.rs  types.rs  util.rs
catgrad-core/src/category/: bidirectional.rs  core.rs  definition.rs  mod.rs  shape.rs
catgrad-core/src/category/bidirectional/: combinators.rs  mod.rs  ops.rs  path.rs  types.rs
catgrad-core/src/category/lang/: mod.rs  ops.rs  path.rs  types.rs
catgrad-core/src/check/: apply.rs  display.rs  interpreter.rs  isomorphism.rs  mod.rs  types.rs
catgrad-core/src/definition/: types.rs
catgrad-core/src/interpreter/: backend.rs  interpreter.rs  mod.rs  ndarray.rs  parameters.rs  run.rs  shape_op.rs  tensor_op.rs  tests.rs  types.rs
catgrad-core/src/interpreter/backend/: candle.rs  mod.rs  ndarray.rs  shape_only.rs
catgrad-core/src/nn/: mod.rs
catgrad-core/src/pass/: mod.rs  to_core.rs
catgrad-core/src/ssa/: mod.rs  tests.rs
catgrad-core/src/stdlib/: def.rs  mod.rs  module.rs  ops.rs  types.rs
catgrad-core/src/stdlib/nn/: mod.rs
catgrad-core/src/typecheck/: check.rs  display.rs  interpreter.rs  mod.rs  parameters.rs  tensor_op.rs  value_types.rs
catgrad-core/tests/: test_bidirectional.rs  test_candle_backend.rs  test_interpreter.rs  test_interpreter_candle.rs  test_lang.rs  test_models.rs  test_shape.rs  test_utils.rs
catgrad-legacy/: Cargo.toml
catgrad-legacy/src/backend/cpu/: eval.rs  kernel.rs  ndarray.rs
catgrad-llm/: Cargo.toml  README.md
catgrad-llm/examples/: README.md  bert.rs  gpt2.rs  llama.rs  model_runner.rs
catgrad-llm/examples/llama/: deepseek.rs  gemma3.rs  gpt2.rs  granite.rs  helpers.rs  llama.rs  main.rs  qwen3.rs
catgrad-llm/examples/llm/: llm.py  main.rs
catgrad-llm/examples/siglip/: README.md  main.rs
catgrad-llm/src/: error.rs  helpers.rs  lib.rs  model_runner.rs  run.rs  serve.rs  traits.rs  utils.rs
catgrad-llm/src/legacy/: mod.rs
catgrad-llm/src/legacy/models/: deepseek.rs  gemma.rs  glm4.rs  gpt2.rs  gpt_oss.rs  granite.rs  llama.rs  mod.rs  modernbert.rs  olmo.rs  phi.rs  qwen.rs  smollm3.rs  utils.rs
catgrad-llm/src/models/: deepseek.rs  gemma.rs  gemma3.rs  glm4.rs  gpt2.rs  gpt_oss.rs  granite.rs  llama.rs  mod.rs  modernbert.rs  olmo.rs  phi.rs  qwen.rs  qwen3.rs  qwen_moe.rs  smollm3.rs  utils.rs
catgrad-llm/src/nn/: layers.rs  mod.rs  rope.rs
catgrad-mlir/: Cargo.toml  README.md  flake.nix
catgrad-mlir/demo/: main.c  main.mlir  negf.mlir  run.sh  sigmoid.mlir
catgrad-mlir/examples/: codegen.rs  demo.rs  e2e.rs  llama.rs.disabled  mlir-llm.rs  mlir.rs  runtime.rs
catgrad-mlir/scripts/: README.md  fuse.sh  llvm.sh
catgrad-mlir/src/: codegen.rs  compile.rs  grammar.rs  inline.rs  lib.rs  lower.rs  ops.rs  pass.rs  runtime.rs  util.rs
catgrad-mlir/src/lower/: emit_mlir.rs  factor.rs  functor.rs  grammar.rs  inline.rs  lower_term.rs  mod.rs  ops.rs  pass.rs  preprocess.rs  test_factor.rs  util.rs
catgrad-mlir/tests/: test_ops.rs
catgrad/examples/: README.md  bert.rs  hidden.rs  nn.rs
catgrad/examples/llm/: gemma.rs  main.rs  olmo.rs  phi.rs
catgrad/src/: lib.rs  path.rs  prelude.rs
catgrad/src/abstract_interpreter/: eval.rs  mod.rs  parameters.rs  types.rs  util.rs
catgrad/src/backend/cpu/: eval.rs  kernel.rs  mod.rs  ndarray.rs
catgrad/src/category/: core.rs  mod.rs
catgrad/src/category/lang/: mod.rs  ops.rs  types.rs
catgrad/src/core/: object.rs  operation.rs
catgrad/src/core/nn/: layers.rs
catgrad/src/definition/: mod.rs
catgrad/src/interpreter/: interpreter.rs  mod.rs  parameters.rs  tensor_op.rs  tests.rs  types.rs
catgrad/src/interpreter/backend/: candle.rs  mod.rs  ndarray.rs  shape_only.rs
catgrad/src/llm/models/: gemma.rs  gpt2.rs  llama.rs  olmo.rs  phi.rs  qwen.rs  utils.rs
catgrad/src/pass/: mod.rs  to_core.rs
catgrad/src/ssa/: mod.rs  tests.rs
catgrad/src/stdlib/: mod.rs  module.rs  ops.rs  stdlib_definitions.rs
catgrad/src/stdlib/nn/: mod.rs
catgrad/src/typecheck/: check.rs  interpreter.rs  isomorphism.rs  mod.rs  parameters.rs  tensor_op.rs  value_types.rs
catgrad/tests/: test_interpreter.rs  test_interpreter_candle.rs  test_lang.rs  test_models.rs  test_utils.rs
examples/: README.md  bert.rs  gpt.rs  llama.rs  model.py  nn.rs  nn_alg.rs  olmo.rs  qwen.rs
examples/llm/: gemma.rs  gpt2.rs  llama.rs  llm.py  main.rs  olmo.rs  phi.rs  qwen.rs
examples/utils/: mod.rs
src/backend/cpu/: eval.rs  kernel.rs  ndarray.rs
src/core/: mod.rs  object.rs  operation.rs
src/core/nn/: layers.rs  utils.rs
