[package]
name = "catgrad"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"

[dependencies]
open-hypergraphs = "0.2.1"
num-traits = "0.2.19"
gemm = "0.18.2"
half = "2.5.0"
safetensors = "0.5.3"
log = "0.4.27"
test-log = "0.2.17"
memmap2 = "0.9.5"

[dev-dependencies]
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokenizers = { version = "0.21.1", features = ["http"] }

[profile.release]
debug = true
