[workspace]
resolver = "3"
members = ["catgrad-legacy", "catgrad-llm", "catgrad", "catgrad-mlir"]

[workspace.package]
description = "a categorical deep learning compiler"
version = "0.2.1"
edition = "2024"
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/hellas-ai/catgrad"
documentation = "https://docs.rs/catgrad"
