[workspace]
resolver = "3"
members = ["catgrad-legacy", "catgrad-llm", "catgrad", "catgrad-mlir"]

[workspace.package]
description = "a categorical deep learning compiler"
version = "0.2.1"
edition = "2024"
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/hellas-ai/catgrad"
documentation = "https://docs.rs/catgrad"

[workspace.dependencies]
open-hypergraphs = "0.2.8"
memmap2 = "0.9.9"
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
half = "2.7.1"
tokenizers = { version = "0.21.4", features = ["http"] }
safetensors = "0.7.0"
