[package]
name = "catgrad-core"
version = "0.1.0"
edition = "2024"

[dependencies]
open-hypergraphs = "0.2.3"
# TODO: make this optional
graphviz-rust = "0.9.5"
open-hypergraphs-dot = "0.2.1"

# Interpreter backends (optional)
ndarray = { version = "0.16.1", optional = true }

[features]
default = []
ndarray-backend = ["dep:ndarray"]
