[package]
name = "catgrad-core"
version = "0.1.0"
edition = "2024"

[dependencies]
open-hypergraphs = "0.2.3"
graphviz-rust = { version = "0.9.5", optional = true }
open-hypergraphs-dot = { version = "0.2.1", optional = true }

# Interpreter backends (optional)
ndarray = { version = "0.16.1", optional = true }

[features]
default = []
ndarray-backend = ["dep:ndarray"]
svg = ["dep:graphviz-rust", "dep:open-hypergraphs-dot"]
