[package]
name = "catgrad-legacy"
description = "A Categorical Deep Learning Compiler"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
open-hypergraphs = "0.2.4"
num-traits = "0.2.19"
gemm = "0.18.2"
half = "2.5.0"
log = "0.4.27"
test-log = "0.2.17"
memmap2 = "0.9.5"
rayon = "1.11.0"
num_cpus = "1.17.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
