[package]
name = "catgrad-legacy"
description = "A Categorical Deep Learning Compiler"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
open-hypergraphs = { workspace = true }
num-traits = "0.2.19"
gemm = "0.18.2"
half = { workspace = true }
log = "0.4.27"
test-log = "0.2.17"
memmap2 = { workspace = true }
rayon = "1.11.0"
num_cpus = "1.17.0"
serde = { workspace = true }
serde_json = { workspace = true }
