[package]
name = "catgrad-llm"
description = "High-level support for large language models in catgrad"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
catgrad-legacy = { version = "0.1.1", path = "../catgrad-legacy" }
catgrad = {version = "0.2.1", path = "../catgrad"}
open-hypergraphs = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokenizers = { version = "0.21.2", features = ["http"] }

# TODO: remove these?
hf-hub = { version = "0.4.3", default-features = false, features = ["ureq"] }
minijinja = "2.11.0"
minijinja-contrib = { version = "2.11.0", features = ["pycompat"] }
memmap2 = "0.9.5"
safetensors = "0.6.0"
log = "0.4.27"
half = "2.6.0"
thiserror = "2.0"
rayon = "1.11.0"


[dev-dependencies]
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
graphviz-rust = "0.9.5"
open-hypergraphs-dot = "0.2.1"
env_logger = "0.11"
test-log = "0.2.17"
image = "0.25.6"
catgrad = {path = "../catgrad", features=["ndarray-backend", "candle-backend", "svg"]}
anyhow = "1.0.99"
