[package]
name = "catgrad-llm"
description = "High-level support for large language models in catgrad"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
catgrad-legacy = { version = "0.1.1", path = "../catgrad-legacy" }
catgrad = {version = "0.2.1", path = "../catgrad"}
open-hypergraphs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }

# TODO: remove these?
hf-hub = { version = "0.4.3", default-features = false, features = ["ureq"] }
minijinja = "2.11.0"
minijinja-contrib = { version = "2.11.0", features = ["pycompat"] }
memmap2 = { workspace = true }
safetensors = {workspace = true}
log = "0.4.27"
half = { workspace = true }
thiserror = "2.0"
rayon = "1.11.0"


[dev-dependencies]
chrono = "0.4.41"
clap = { workspace = true }
graphviz-rust = "0.9.5"
open-hypergraphs-dot = "0.2.1"
env_logger = "0.11"
test-log = "0.2.17"
image = "0.25.6"
catgrad = {path = "../catgrad", features=["ndarray-backend", "candle-backend", "svg"]}
anyhow = "1.0.99"
