[package]
name = "catgrad-mlir"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
description = "A MLIR backend for catgrad"
license = "MIT"
repository = "https://github.com/hellas-ai/catgrad"
documentation = "https://docs.rs/catgrad"

[dependencies]
catgrad = { version = "0.2.1", path = "../catgrad" }
derive_more = { version = "2.0.1", features = ["from"] }
libc = "0.2.177"
libffi = "5.0.0"
open-hypergraphs = "0.2.8"
tempdir = "0.3.7"
tempfile = "3.23.0"

[dev-dependencies]
anyhow = "1.0.100"
catgrad-llm = { path = "../catgrad-llm" }
half = "2.7.1"
memmap2 = "0.9.9"
safetensors = "0.7.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokenizers = "0.22.1"
