[package]
name = "catgrad"
version = "0.2.0"
edition = "2024"
description = "a categorical deep learning compiler"
license = "MIT"

[dependencies]
open-hypergraphs = "0.2.7"
graphviz-rust = { version = "0.9.5", optional = true }
open-hypergraphs-dot = { version = "0.2.1", optional = true }

# Interpreter backends (optional)
ndarray = { version = "0.16.1", optional = true }
candle-core = { version = "0.8", optional = true }

[features]
default = []
ndarray-backend = ["dep:ndarray"]
candle-backend = ["dep:candle-core"]
svg = ["dep:graphviz-rust", "dep:open-hypergraphs-dot"]
