[package]
name = "catgrad"
version = "0.2.1"
edition = "2024"
rust-version = "1.87"
description = "a categorical deep learning compiler"
license = "MIT"
repository = "https://github.com/hellas-ai/catgrad"
documentation = "https://docs.rs/catgrad"

[dependencies]
open-hypergraphs = "0.2.7"
graphviz-rust = { version = "0.9.5", optional = true }
open-hypergraphs-dot = { version = "0.2.1", optional = true }

# Interpreter backends (optional)
ndarray = { version = "0.17.1", optional = true }
candle-core = { version = "0.9", optional = true }

[features]
default = []
ndarray-backend = ["dep:ndarray"]
candle-backend = ["dep:candle-core"]
cuda = ["candle-core/cuda"]
metal = ["candle-core/metal"]
svg = ["dep:graphviz-rust", "dep:open-hypergraphs-dot"]
