[package]
name = "catgrad"
version = "0.2.1"
description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
open-hypergraphs = "0.2.7"
graphviz-rust = { version = "0.9.5", optional = true }
open-hypergraphs-dot = { version = "0.2.1", optional = true }

# Interpreter backends (optional)
ndarray = { version = "0.17.1", optional = true }
candle-core = { version = "0.9", optional = true }

[features]
default = []
ndarray-backend = ["dep:ndarray"]
candle-backend = ["dep:candle-core"]
cuda = ["candle-core/cuda"]
metal = ["candle-core/metal"]
svg = ["dep:graphviz-rust", "dep:open-hypergraphs-dot"]
